Free empty space when top bar is invisible, fix edit doesn't work, update clear selected to immediately clear selection without too many actions

--- a/ui/scss/src/_studio-view.scss
+++ b/ui/scss/src/_studio-view.scss
@@ -206,6 +206,7 @@
   }
 
   .site-dashboard {
+    top: 0 !important;
     left: 0 !important;
   }
 }
